[package]
name = "vss"
version = "0.1.1"
edition = "2021"
description = "A dead simple library to allow for easily reused shutdown signal handling"
repository = "https://github.com/randomairborne/vss"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["shutdown", "axum"]
categories = ["asynchronous", "web-programming"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["signal"] }
